# fast-auth

./: .env.sample  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
server/: config.py  database.py  main.py  utils.py
server/archives/: env.py
server/archives/versions/: 02b93897c8e3_keys_and_triggers.py  76eab936d3f6_auth_v1.py  b0423db9f1e9_account_and_user.py
server/auth/: controller.py  crud.py  dependencies.py  models.py  routes.py  schemas.py  utils.py
server/cache/: account.py  base.py
server/core/: config.py
server/core/environments/: base.py  development.py  production.py  staging.py
server/crud/: base.py  user.py
server/dependencies/: session.py
server/docs/: README.md  metadata.py
server/migrations/: env.py
server/migrations/versions/: 9869e5efb6ff_user_first_version.py  b68f620c315a_first_revision.py  c1f00f1b80e9_is_active.py
server/models/: user.py
server/routers/: auth.py  authentication.py  user.py
server/schemas/: account.py  base.py  token.py  user.py
server/security/: dependencies.py  hash.py  password.py  token.py
server/services/: email.py  exceptions.py  formatters.py  messages.py  validators.py
server/sql/: base.py  user.py
server/templates/: base.html
server/utilities/: converters.py  exceptions.py  http_exceptions.py
tests/: conftest.py
tests/api-tests/: test_main.py
tests/unit-tests/test_services/: test_email.py  test_exceptions.py  test_formatters.py  test_messages.py  test_validators.py
